# NubbPlusPlus

./: .gitignore  CMakeLists.txt  README.md  changelog.txt  code.nubb++  emitter.cpp  emitter.h  grammar.txt  lexer.cpp  lexer.h  nubb++.cpp  nubb++build  nubb++build.sh  parser.cpp  parser.h  test.cpp
Nubb++ Examples/: Arrays.nubb++  NOT.nubb++
Nubb++Examples/: ArrayComparisons.nubb++  Functions.nubb++  IFStatementBugs.nubb++  NOT.nubb++  VoidFunc.nubb++
rules and info/: enums.txt  grammar.txt
source/: lexer.cpp  lexer.h  parser.cpp
src/: lexer.cpp  lexer.h  nubb++.cpp  parser.cpp  parser.h
